[package]
name = "p2p_exec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
libp2p = "0.43.0"
futures = "0.3.21"
async-std = { version = "1.10.0", features = ["attributes"] }
env_logger = "0.9.0"
clap = "3.2.12"
anyhow = "1.0.58"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
